# msdp-web-server

./: .gitignore  LICENSE  README.md  tintin_client.txt  zmud_client.txt
MUSHclient/: HttpDataSender.xml
python_server/: .env-example  requirements.txt  server.py
python_server/static/: script.js  style.css  subscriber_client.html
rust_data_server/src/: main.rs
rust_data_server/static/: subscriber_client.html
rust_server/: Cargo.toml
rust_server/.cargo/: config.toml
rust_server/src/: main.rs
rust_server/static/: script.js  style.css  subscriber_client.html
